<resources>
    <string name="app_name">ProjectLab-Pollista</string>
    <string name="user_name">ali.madatovv</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>

    <string name="language">Language</string>
    <string name="sign_in">Sign in</string>
    <string name="username_or_password_is_wrong">Username or password is wrong.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">English</string>
    <string name="Hungarian">Magyar</string>

    <string name="app_settings">App settings</string>
    <string name="account_settings">Account settings</string>

    <string name="server_client_id">625866253547-6s1jhl6kh4rcbh8e3n6ovc0bjc7nijjp.apps.googleusercontent.com</string>

    <string name="log_out">Log out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="personal_information">Personal information</string>
    <string name="security">Security</string>
    <string name="privacy">Privacy</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="phone">Phone</string>
    <string name="email_address">ali.madatov@gmail.com</string>
    <string name="phone_number">+36203681579</string>
    <string name="change_profile_picture">Change profile picture</string>
</resources>