<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.pollista.UI.NavigationFragments.BottomSheetFragments.AccountSettings.PersonalInformationFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ltTopLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="10dp"
            android:layout_height="17dp"

            android:contentDescription="Click to go back"
            android:background="@drawable/black_back_icon"
            android:padding="5dp"

            android:layout_marginStart="22dp"
            app:layout_constraintStart_toStartOf="@id/ltTopLayer"
            app:layout_constraintTop_toTopOf="@id/ltTopLayer"
            app:layout_constraintEnd_toEndOf="@id/ltTopLayer"
            app:layout_constraintBottom_toBottomOf="@id/ltTopLayer"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.0"
            />

        <TextView
            android:id="@+id/tvPersonalInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/personal_information"
            android:textAllCaps="false"
            android:textColor="@color/main_black"
            android:fontFamily="@font/gilorysemibold"
            android:textSize="@dimen/title_text_size"
            android:letterSpacing="@dimen/normal_text_line_spacing"

            app:layout_constraintStart_toStartOf="@id/ltTopLayer"
            app:layout_constraintTop_toTopOf="@id/ltTopLayer"
            app:layout_constraintBottom_toBottomOf="@id/ltTopLayer"
            app:layout_constraintEnd_toEndOf="@id/ltTopLayer"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.5"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:drawableEnd="@drawable/blue_selected_icon"
            android:background="@android:color/transparent"
            android:paddingEnd="20dp"

            app:layout_constraintStart_toStartOf="@id/ltTopLayer"
            app:layout_constraintTop_toTopOf="@id/ltTopLayer"
            app:layout_constraintEnd_toEndOf="@id/ltTopLayer"
            app:layout_constraintBottom_toBottomOf="@id/ltTopLayer"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="1.0"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ltMiddleLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ltTopLayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"

        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvUsernameLabel"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/start_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:text="@string/username"
                android:paddingVertical="@dimen/normal_text_vertical_padding"
                android:textAllCaps="false"
                android:textColor="@color/color_divider_dark"
                android:fontFamily="@font/giloryregular"
                android:textSize="@dimen/normal_text_size"
                android:letterSpacing="@dimen/normal_text_line_spacing"
                />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/color_divider_light"
                android:layout_marginEnd="@dimen/end_margin"
                app:layout_constraintStart_toEndOf="@id/tvUsernameLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:inputType="text"
                android:text="@string/user_name"
                android:paddingVertical="@dimen/normal_text_vertical_padding"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:textColor="@color/main_black"
                android:fontFamily="@font/giloryregular"
                android:textSize="@dimen/normal_text_size"
                android:letterSpacing="@dimen/normal_text_line_spacing"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvEmailLabel"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/start_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:text="@string/e_mail"
                android:paddingVertical="@dimen/normal_text_vertical_padding"
                android:textAllCaps="false"
                android:textColor="@color/color_divider_dark"
                android:fontFamily="@font/giloryregular"
                android:textSize="@dimen/normal_text_size"
                android:letterSpacing="@dimen/normal_text_line_spacing"
                />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/color_divider_light"
                android:layout_marginEnd="@dimen/end_margin"
                app:layout_constraintStart_toEndOf="@id/tvEmailLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:inputType="textEmailAddress"
                android:text="@string/email_address"
                android:paddingVertical="@dimen/normal_text_vertical_padding"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/main_black"
                android:fontFamily="@font/giloryregular"
                android:textSize="@dimen/normal_text_size"
                android:letterSpacing="@dimen/normal_text_line_spacing"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNameLabel"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/start_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:text="@string/name"
                android:paddingVertical="@dimen/normal_text_vertical_padding"
                android:textAllCaps="false"
                android:textColor="@color/color_divider_dark"
                android:fontFamily="@font/giloryregular"
                android:textSize="@dimen/normal_text_size"
                android:letterSpacing="@dimen/normal_text_line_spacing"
                />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/color_divider_light"
                android:layout_marginEnd="@dimen/end_margin"
                app:layout_constraintStart_toEndOf="@id/tvNameLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:inputType="text"
                android:text="Ali Madatov"
                android:paddingVertical="@dimen/normal_text_vertical_padding"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/main_black"
                android:fontFamily="@font/giloryregular"
                android:textSize="@dimen/normal_text_size"
                android:letterSpacing="@dimen/normal_text_line_spacing"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvBioLabel"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/start_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:text="@string/bio"
                android:paddingVertical="@dimen/normal_text_vertical_padding"
                android:textAllCaps="false"
                android:textColor="@color/color_divider_dark"
                android:fontFamily="@font/giloryregular"
                android:textSize="@dimen/normal_text_size"
                android:letterSpacing="@dimen/normal_text_line_spacing"
                />

            <EditText
                android:id="@+id/etBio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/color_divider_light"
                android:layout_marginEnd="@dimen/end_margin"
                app:layout_constraintStart_toEndOf="@id/tvBioLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:inputType="text"
                android:text="Software Developer"
                android:paddingVertical="@dimen/normal_text_vertical_padding"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/main_black"
                android:fontFamily="@font/giloryregular"
                android:textSize="@dimen/normal_text_size"
                android:letterSpacing="@dimen/normal_text_line_spacing"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPhoneLabel"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/start_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:text="@string/phone"
                android:paddingVertical="@dimen/normal_text_vertical_padding"
                android:textAllCaps="false"
                android:textColor="@color/color_divider_dark"
                android:fontFamily="@font/giloryregular"
                android:textSize="@dimen/normal_text_size"
                android:letterSpacing="@dimen/normal_text_line_spacing"
                />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/color_divider_light"
                android:layout_marginEnd="@dimen/end_margin"
                app:layout_constraintStart_toEndOf="@id/tvPhoneLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:inputType="phone"
                android:text="@string/phone_number"
                android:paddingVertical="@dimen/normal_text_vertical_padding"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/main_black"
                android:fontFamily="@font/giloryregular"
                android:textSize="@dimen/normal_text_size"
                android:letterSpacing="@dimen/normal_text_line_spacing"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProfilePhoto"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:background="@color/color_divider_light"
        android:layout_marginTop="@dimen/top_margin"
        app:shapeAppearanceOverlay="@style/roundedImageViewBound"
        android:src="@drawable/ic_profile_2"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/ltMiddleLayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/tvChangePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:clickable="true"
        android:text="@string/change_profile_picture"
        android:textSize="@dimen/normal_text_size"
        android:fontFamily="@font/giloryregular"
        android:textColor="@color/main_blue"
        android:textAlignment="center"
        android:letterSpacing="@dimen/normal_text_line_spacing"

        android:layout_marginTop="@dimen/small_top_margin"
        app:layout_constraintTop_toBottomOf="@id/imgProfilePhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>


</androidx.constraintlayout.widget.ConstraintLayout>