<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.pollista.UI.NavigationFragments.BottomSheetFragments.AppSettings.LanguageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ltTopLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/language"
            android:textAllCaps="false"
            android:textColor="@color/main_black"
            android:fontFamily="@font/gilorysemibold"
            android:textSize="@dimen/title_text_size"
            android:letterSpacing="0.08"


            app:layout_constraintStart_toStartOf="@id/ltTopLayer"
            app:layout_constraintTop_toTopOf="@id/ltTopLayer"
            app:layout_constraintBottom_toBottomOf="@id/ltTopLayer"
            app:layout_constraintEnd_toEndOf="@id/ltTopLayer"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.5"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="10dp"
            android:layout_height="17dp"

            android:background="@drawable/black_back_icon"
            android:padding="5dp"

            android:layout_marginStart="22dp"
            app:layout_constraintStart_toStartOf="@id/ltTopLayer"
            app:layout_constraintTop_toTopOf="@id/ltTopLayer"
            app:layout_constraintEnd_toEndOf="@id/ltTopLayer"
            app:layout_constraintBottom_toBottomOf="@id/ltTopLayer"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.0"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ltBottomLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ltTopLayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"

        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEnglish"
            android:layout_width="match_parent"
            android:layout_height="51dp"

            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/blue_selected_icon"
            android:text="@string/english"
            android:textAlignment="viewStart"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:textAllCaps="false"
            android:textColor="@color/main_blue"
            android:fontFamily="@font/giloryregular"
            android:textSize="@dimen/normal_text_size"
            android:letterSpacing="0.08"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHungarian"
            android:layout_width="match_parent"
            android:layout_height="51dp"

            android:background="@android:color/transparent"
            android:text="@string/Hungarian"
            android:textAlignment="viewStart"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:textAllCaps="false"
            android:textColor="@color/main_black"
            android:fontFamily="@font/giloryregular"
            android:textSize="@dimen/normal_text_size"
            android:letterSpacing="0.08"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>