<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ltProfile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ltTopLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHamburger"
            android:layout_width="21.9dp"
            android:layout_height="17dp"

            android:background="@drawable/menu_icon"

            android:layout_margin="27dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="1.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProfilePhoto"
        android:layout_width="85dp"
        android:layout_height="85dp"

        app:shapeAppearanceOverlay="@style/roundedImageViewBound"
        app:strokeColor="@color/main_black"
        app:strokeWidth="0.5dp"
        android:src="@drawable/photo1"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="27dp"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/user_name"
        android:textSize="26sp"
        android:fontFamily="@font/gilorysemibold"
        android:textColor="@color/main_black"
        android:textAlignment="center"

        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/imgProfilePhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <LinearLayout
        android:id="@+id/ltPersonalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Ali Madatov"
            android:fontFamily="@font/gilorysemibold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/main_black"

            android:clickable="false"/>

        <TextView
            android:id="@+id/tvBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Software Developer"
            android:fontFamily="@font/giloryregular"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/main_black"

            android:clickable="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ltDetailsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ltPersonalInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/tvPostsNumber"
            android:layout_width="106dp"
            android:layout_height="wrap_content"

            android:text="18"
            android:fontFamily="@font/gilorysemibold"
            android:textSize="19sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/main_black"

            android:clickable="true"/>

        <TextView
            android:id="@+id/tvFollowersNumber"
            android:layout_width="106dp"
            android:layout_height="wrap_content"

            android:text="356"
            android:fontFamily="@font/gilorysemibold"
            android:textSize="19sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/main_black"

            android:clickable="true"/>

        <TextView
            android:id="@+id/tvFollowingNumber"
            android:layout_width="106dp"
            android:layout_height="wrap_content"

            android:text="334"
            android:fontFamily="@font/gilorysemibold"
            android:textSize="19sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/main_black"

            android:clickable="true"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/ltDetailsBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/ltDetailsTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="106dp"
            android:layout_height="wrap_content"

            android:text="@string/posts"
            android:fontFamily="@font/giloryregular"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/main_black"/>

        <TextView
            android:layout_width="106dp"
            android:layout_height="wrap_content"

            android:text="@string/followers"
            android:fontFamily="@font/giloryregular"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/main_black"/>

        <TextView
            android:layout_width="106dp"
            android:layout_height="wrap_content"

            android:text="@string/following"
            android:fontFamily="@font/giloryregular"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/main_black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>